[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.7.3", features = [ "mysql", "runtime-tokio", "tls-rustls" ] }
dotenv = "0.15.0"
serde = { version = "1.0.197", feature = ["derive"] }
serde_json = "1.0.114"

[[bin]]
name = "myapp"
path = "src/main.rs"